# librarian-agent

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  demo.py  docker-compose.yml  pyproject.toml
data/: catalog.json
evals/: retrieval.py
src/librarian/: api.py  config.py  ingest.py  models.py
src/librarian/agent/: loop.py  prompts.py  tools.py
src/librarian/storage/: db.py  embeddings.py  vector_store.py
tests/: conftest.py  test_api.py  test_db.py  test_end_to_end.py  test_loop.py  test_models.py  test_pipeline.py  test_tools.py  test_vector_store.py
