[project]
name = "librarian-agent"
version = "0.1.0"
description = "AI librarian agent"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.45.0",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/librarian"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "Q"]
ignore = ["F403", "F405", "E402"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
